Include globalid when redirecting to signup

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ calcite-card {
           Sign in
         </calcite-button>
 
-        <calcite-button id="btn-signup" appearance="outline" href="signup.html" width="full" scale="l" style="margin-top:1rem;">
+        <calcite-button id="btn-signup" appearance="outline" width="full" scale="l" style="margin-top:1rem;">
           Sign up
         </calcite-button>
       <calcite-notice id="message" width="full" open style="display:none; margin-top:1rem;">
@@ -118,12 +118,17 @@ calcite-card {
       window.location.href=authorizationEndpoint
     });
 
+    const signUpButton = document.getElementById("btn-signup");
+
     const params = new URLSearchParams(window.location.search)
     const globalid = params.get("id")
+    
+    signInButton.addEventListener("click", () => {
+      window.location.ref = "signup.html?id="+globalid
+    })
     if (globalid === null || globalid.length !== 36){
       showMessage("Invalid app id in url", "danger")
       signInButton.disabled = true
-      const signUpButton = document.getElementById("btn-signup");
       signUpButton.disabled = true
     }
     localStorage.setItem("globalid", globalid); // save for later
