--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ArcGIS Setup</title>
   <!-- Load Calcite Components -->
   <script type="module" src="https://js.arcgis.com/calcite-components/2.10.0/calcite.esm.js"></script>
