--- a/web/index.html
+++ b/web/index.html
@@ -71,7 +71,7 @@
     <script type="module">
 
       const clientId = "g1USQR93RzdudfBQ";
-      const redirectUri = "https://purple-mushroom-03a5e7c10.3.azurestaticapps.net/callback.html;
+      const redirectUri = "https://purple-mushroom-03a5e7c10.3.azurestaticapps.net/callback.html";
 
       const dec2hex = (dec) => {
         return ("0" + dec.toString(16)).substr(-2);
